@@ -182,4 +182,19 @@ public class DefaultJackson2JavaTypeMapper extends AbstractJavaTypeMapper
 		return toJavaType(headers).getRawClass();
 	}
 
+	@Override
+	public void removeHeaders(Headers headers) {
+		try {
+			headers.remove(getClassIdFieldName());
+			headers.remove(getContentClassIdFieldName());
+			headers.remove(getKeyClassIdFieldName());
+			headers.remove(KEY_DEFAULT_CLASSID_FIELD_NAME);
+			headers.remove(KEY_DEFAULT_CONTENT_CLASSID_FIELD_NAME);
+			headers.remove(KEY_DEFAULT_KEY_CLASSID_FIELD_NAME);
+		}
+		catch (Exception e) {
+			// NOSONAR
+		}
+	}
+
 }
