@@ -70,6 +70,8 @@ You can now provide type mapping information using producer/consumer properties.
 
 New constructors are available on the deserializer to allow overriding the type header information with the supplied target type.
 
+The JsonDeserializer will now remove any type information headers by default.
+
 See <<serdes>> for more information.
 
 ==== Kafka Streams Changes
